plugins/devkit/devkit-kotlin-tests/testData/inspections/registrationProblems/code/AbstractApplicationComponent.kt
abstract class <error descr="Plugin component class must not be abstract">AbstractApplicationComponent</error> : com.intellij.openapi.components.BaseComponent
